// =====================================================
// SISTEMA WEB LABORATORIO CLINICO FRANZ
// Diagrama Simplificado - 18 Tablas Core
// Nomenclatura real del sistema Prisma
// =====================================================

// ==================== SCHEMA: usuarios ====================

Table usuarios.usuario {
  codigo_usuario int [pk, increment]
  codigo_rol int [ref: > usuarios.rol.codigo_rol]
  cedula varchar(10) [unique, not null]
  nombres varchar(100) [not null]
  apellidos varchar(100) [not null]
  email varchar(100) [unique, not null]
  telefono varchar(15)
  fecha_nacimiento date
  genero varchar(20)
  direccion text
  password_hash varchar(255) [not null]
  salt varchar(255) [not null]
  email_verificado boolean [default: false]
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

Table usuarios.rol {
  codigo_rol int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  nivel_acceso int [default: 1]
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

// ==================== SCHEMA: catalogo ====================

Table catalogo.categoria_examen {
  codigo_categoria int [pk, increment]
  nombre varchar(100) [unique, not null]
  descripcion text
  activo boolean [default: true]
}

Table catalogo.examen {
  codigo_examen int [pk, increment]
  codigo_categoria int [ref: > catalogo.categoria_examen.codigo_categoria]
  codigo_interno varchar(50) [unique, not null]
  nombre varchar(200) [not null]
  descripcion text
  requiere_ayuno boolean [default: false]
  horas_ayuno int
  instrucciones_preparacion text
  tiempo_entrega_horas int [default: 24]
  tipo_muestra varchar(100)
  valor_referencia_min decimal(10,4)
  valor_referencia_max decimal(10,4)
  valores_referencia_texto text
  unidad_medida varchar(50)
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

Table catalogo.precio {
  codigo_precio int [pk, increment]
  codigo_examen int [ref: > catalogo.examen.codigo_examen]
  precio decimal(10,2) [not null]
  fecha_inicio date [default: `now()`]
  fecha_fin date
  activo boolean [default: true]
}

// ==================== SCHEMA: agenda ====================

Table agenda.sede {
  codigo_sede int [pk, increment]
  nombre varchar(200) [not null]
  direccion text [not null]
  telefono varchar(15)
  email varchar(100)
  activo boolean [default: true]
}

Table agenda.servicio {
  codigo_servicio int [pk, increment]
  nombre varchar(200) [not null]
  descripcion text
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

Table agenda.slot {
  codigo_slot int [pk, increment]
  codigo_servicio int [ref: > agenda.servicio.codigo_servicio]
  codigo_sede int [ref: > agenda.sede.codigo_sede]
  fecha date [not null]
  hora_inicio time [not null]
  hora_fin time [not null]
  cupos_totales int [default: 1]
  cupos_disponibles int [default: 1]
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

Table agenda.cita {
  codigo_cita int [pk, increment]
  codigo_slot int [ref: > agenda.slot.codigo_slot]
  codigo_paciente int [ref: > usuarios.usuario.codigo_usuario]
  codigo_cotizacion int [unique, ref: > pagos.cotizacion.codigo_cotizacion]
  estado varchar(50) [default: 'AGENDADA', note: 'AGENDADA, CONFIRMADA, EN_PROCESO, COMPLETADA, CANCELADA']
  observaciones text
  motivo_cancelacion text
  confirmada boolean [default: false]
  fecha_confirmacion datetime
  fecha_creacion datetime [default: `now()`]
}

// ==================== SCHEMA: pagos ====================

Table pagos.cotizacion {
  codigo_cotizacion int [pk, increment]
  codigo_paciente int [ref: > usuarios.usuario.codigo_usuario]
  numero_cotizacion varchar(50) [unique, not null]
  fecha_cotizacion datetime [default: `now()`]
  fecha_expiracion datetime [not null]
  subtotal decimal(10,2) [not null]
  descuento decimal(10,2) [default: 0]
  total decimal(10,2) [not null]
  estado varchar(50) [default: 'PENDIENTE', note: 'PENDIENTE, PENDIENTE_PAGO_VENTANILLA, PAGO_EN_PROCESO, PAGADA, RECHAZADA, EXPIRADA']
  metodo_pago_seleccionado varchar(20) [note: 'ONLINE, VENTANILLA']
  fecha_seleccion_pago datetime
  observaciones text
}

Table pagos.cotizacion_detalle {
  codigo_detalle int [pk, increment]
  codigo_cotizacion int [ref: > pagos.cotizacion.codigo_cotizacion]
  codigo_examen int [ref: > catalogo.examen.codigo_examen]
  cantidad int [not null]
  precio_unitario decimal(10,2) [not null]
  total_linea decimal(10,2) [not null]
}

Table pagos.pago {
  codigo_pago int [pk, increment]
  codigo_cotizacion int [ref: > pagos.cotizacion.codigo_cotizacion]
  codigo_paciente int [ref: > usuarios.usuario.codigo_usuario]
  numero_pago varchar(50) [unique, not null]
  fecha_pago datetime [default: `now()`]
  monto_total decimal(10,2) [not null]
  metodo_pago varchar(50) [not null]
  estado varchar(50) [default: 'PENDIENTE', note: 'PENDIENTE, COMPLETADO, FALLIDO, REEMBOLSADO']
  proveedor_pasarela varchar(100) [note: 'stripe, paypal, etc']
  id_transaccion_externa varchar(200)
  url_comprobante text
  observaciones text
}

Table pagos.factura {
  codigo_factura int [pk, increment]
  codigo_pago int [unique, ref: > pagos.pago.codigo_pago]
  numero_factura varchar(50) [unique, not null]
  fecha_emision datetime [default: `now()`]
  subtotal decimal(10,2) [not null]
  iva decimal(10,2) [default: 0]
  total decimal(10,2) [not null]
  estado varchar(50) [default: 'EMITIDA']
  url_pdf text
  clave_acceso varchar(100)
}

// ==================== SCHEMA: resultados ====================

Table resultados.muestra {
  codigo_muestra int [pk, increment]
  codigo_paciente int [ref: > usuarios.usuario.codigo_usuario]
  codigo_cita int [ref: > agenda.cita.codigo_cita]
  id_muestra varchar(50) [unique, not null, note: 'Codigo de barras']
  fecha_toma datetime [default: `now()`]
  tipo_muestra varchar(100)
  estado varchar(50) [default: 'RECOLECTADA', note: 'RECOLECTADA, EN_PROCESO, PROCESADA']
  observaciones text
  tomada_por int [ref: > usuarios.usuario.codigo_usuario]
}

Table resultados.resultado {
  codigo_resultado int [pk, increment]
  codigo_muestra int [ref: > resultados.muestra.codigo_muestra]
  codigo_examen int [ref: > catalogo.examen.codigo_examen]
  valor_numerico decimal(15,6)
  valor_texto text
  unidad_medida varchar(50)
  dentro_rango_normal boolean
  nivel varchar(20) [note: 'NORMAL, ALTO, BAJO, CRITICO']
  observaciones_tecnicas text
  valor_referencia_min decimal(10,4)
  valor_referencia_max decimal(10,4)
  valores_referencia_texto text
  estado varchar(50) [default: 'EN_PROCESO', note: 'EN_PROCESO, LISTO, VALIDADO, ENTREGADO']
  fecha_resultado datetime [default: `now()`]
  procesado_por int [ref: > usuarios.usuario.codigo_usuario]
  validado_por int [ref: > usuarios.usuario.codigo_usuario]
  fecha_validacion datetime
  url_pdf text
  codigo_verificacion varchar(100)
}

// ==================== SCHEMA: inventario ====================

Table inventario.item {
  codigo_item int [pk, increment]
  codigo_categoria int [ref: > inventario.categoria_item.codigo_categoria]
  codigo_interno varchar(50) [unique, not null]
  nombre varchar(200) [not null]
  descripcion text
  unidad_medida varchar(50) [not null]
  stock_actual int [default: 0]
  stock_minimo int [default: 0]
  stock_maximo int
  costo_unitario decimal(10,2)
  es_reactivo boolean [default: false]
  vida_util_dias_abierto int
  capacidad_pruebas int
  activo boolean [default: true]
  fecha_creacion datetime [default: `now()`]
}

Table inventario.categoria_item {
  codigo_categoria int [pk, increment]
  nombre varchar(100) [unique, not null]
  descripcion text
  activo boolean [default: true]
}

Table inventario.lote {
  codigo_lote int [pk, increment]
  codigo_item int [ref: > inventario.item.codigo_item]
  numero_lote varchar(100) [not null]
  fecha_fabricacion date
  fecha_vencimiento date
  cantidad_inicial int [not null]
  cantidad_actual int [not null]
  proveedor varchar(200)
  fecha_ingreso datetime [default: `now()`]
  estado_lote varchar(20) [default: 'CERRADO', note: 'CERRADO, ABIERTO, AGOTADO, DESCARTADO']
  fecha_apertura timestamp
  fecha_vencimiento_abierto timestamp
  pruebas_realizadas int [default: 0]
}

// =====================================================
// FLUJO PRINCIPAL DEL SISTEMA
// =====================================================
//
// 1. Paciente (usuario) se registra con rol "PACIENTE"
// 2. Paciente crea cotizacion con examenes
// 3. Paciente paga (online o ventanilla)
// 4. Paciente agenda cita en un slot disponible
// 5. Tecnico toma muestra en la cita
// 6. Laboratorista procesa resultado
// 7. Bioanalista valida resultado
// 8. Paciente descarga PDF con codigo_verificacion
//
// =====================================================
